manifests/test-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  labels:
    app: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64

      tolerations:
        - key: "arch"
          operator: "Equal"
          value: "amd64"
          effect: "NoSchedule"

      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:blue
          name: kuard
          ports:
            - containerPort: 8080
              name: http
