manifests/test-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
spec:
  selector:
    app: foo
  ports:
    - port: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  selector:
    app: bar
  ports:
    - port: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
