manifests/test-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
              name: foo-svc
              port:
                number: 5678
        - path: /bar
          pathType: Prefix
          backend:
            service:
              name: bar-svc
              port:
                number: 5678
