manifests/test-deployment/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailnet-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: tailnet-nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: test.ts.cedi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard-service
                port:
                  number: 8080
  tls:
  - hosts:
    - test.ts.cedi.dev
    secretName: test-ts-secret
